# chorus

./: .env.example  .gitignore  Makefile  Murmur_Architecture_and_Build_Plan.md  Murmur_Closed_Loop_Refactor_Plan.md  README.md  REVIEW.md  chorus_contract_first_execution_harness_plan.md  murmur_contract_first_execution_harness_plan.md  pyproject.toml  skills-lock.json
.github/workflows/: chorus-gate.yml  ci.yml  murmur-gate.yml
chorus/: __init__.py  cli.py
chorus/adapters/: __init__.py
chorus/adapters/agents/: __init__.py  contract_lite.py  deepseek_coder.py  fake.py  murmur_patch.py  registry.py  stochastic.py  swe.py
chorus/adapters/models/: __init__.py  fake.py  ollama.py  openai_compatible.py
chorus/adapters/sandboxes/: __init__.py  local_worktree.py
chorus/adapters/storage/: __init__.py  baseline.py  jsonl.py  memory.py
chorus/adapters/tools/: contract_proxy.py
chorus/adapters/trace/: __init__.py  importers.py  memory.py  otlp.py
chorus/application/: contract_compiler.py  fix_test.py  proof_builder.py  tournament.py  verifier.py  workflow_planner.py  workflow_runtime.py
chorus/benchmarks/: __init__.py  loader.py  scaffold.py  swebench.py
chorus/benchmarks/swe/: __init__.py  evaluator.py  judge.py  model.py  providers.py  runner.py  scaffold.py  types.py
chorus/ci/: action.yml
chorus/config/: __init__.py  env.py
chorus/core/: __init__.py  acceptance.py  agent_tasks.py  classify.py  conductor.py  divergence.py  events.py  judge.py  metrics.py  model_port.py  ports.py  regression.py  results.py  schema.py  suite.py  types.py
chorus/domain/: __init__.py  policy.py  proof.py  tool.py  verification.py  workflow.py
chorus/gateway/: __init__.py  tool_gateway.py
chorus/report/: __init__.py  cliff_md.py  fan.py  fan_html.py  markdown.py  murmur_workflow_html.py  regression_md.py  swe_html.py  swe_md.py  trace_html.py  ui_theme.py
chorus/trace/: __init__.py  emit.py  mapper.py
docs/: CHORUS_PHASE_1_BUILD.md  CHORUS_PHASE_2_BUILD.md  CHORUS_PHASE_3_BUILD.md  CHORUS_PHASE_4_BUILD.md  CHORUS_PHASE_5_BUILD.md  CHORUS_PHASE_6_BUILD.md  LANGSMITH_MCP_LOOP.md  MURMUR_PHASE_1_BUILD.md  MURMUR_PHASE_2_BUILD.md  MURMUR_PHASE_3_BUILD.md  MURMUR_PHASE_4_BUILD.md  MURMUR_PHASE_5_BUILD.md  MURMUR_PHASE_6_BUILD.md  architecture.md  flock.md  github-action.md  quickstart.md
docs/_shots/site/: index.html
murmur/: __init__.py  cli.py
murmur/adapters/: __init__.py
murmur/adapters/agents/: __init__.py  contract_lite.py  deepseek_coder.py  fake.py  langgraph.py  murmur_patch.py  registry.py  stochastic.py  swe.py
murmur/adapters/models/: __init__.py  fake.py  ollama.py  openai_compatible.py
murmur/adapters/sandboxes/: local_worktree.py
murmur/adapters/storage/: __init__.py  baseline.py  jsonl.py  memory.py
murmur/adapters/tools/: __init__.py  contract_proxy.py
murmur/adapters/trace/: __init__.py  importers.py  memory.py  otlp.py
murmur/application/: __init__.py  contract_compiler.py  event_log.py  fix_test.py  proof_builder.py  tournament.py  verifier.py  workflow_planner.py  workflow_runtime.py
murmur/benchmarks/: __init__.py  loader.py  scaffold.py  swebench.py
murmur/benchmarks/swe/: __init__.py  evaluator.py  judge.py  model.py  providers.py  runner.py  scaffold.py  types.py
murmur/ci/: action.yml
murmur/config/: __init__.py  env.py
murmur/core/: __init__.py  acceptance.py  agent_tasks.py  classify.py  conductor.py  divergence.py  events.py  judge.py  metrics.py  model_port.py  ports.py  regression.py  results.py  schema.py  suite.py  types.py
murmur/domain/: __init__.py  contract.py  policy.py  proof.py  tool.py
murmur/flock/: __init__.py  artifact.py  eventlog.py  gateway.py  improve.py  ir.py  library.py  models.py  operators.py  planner.py  report.py  scheduler.py
murmur/flock/adapters/: __init__.py  fake.py  openai_compat.py
murmur/flock/examples/: resumes.yaml
murmur/gateway/: __init__.py  tool_gateway.py
murmur/report/: __init__.py  cliff_md.py  fan.py  fan_html.py  markdown.py  murmur_workflow_html.py  regression_md.py  swe_html.py  swe_md.py  trace_html.py  ui_theme.py
murmur/trace/: emit.py  mapper.py  spans.py
tasks/: demo.yaml  hard.yaml
tests/: test_acceptance.py  test_cli_adoption.py  test_contract_first_harness.py  test_external_trace_importers.py  test_flock_cli.py  test_flock_gateway.py  test_flock_hardening.py  test_flock_improve.py  test_flock_ir.py  test_flock_planner.py  test_flock_runtime.py  test_model_port.py  test_model_providers.py  test_murmur_patch_agent.py  test_phase0_record_replay.py  test_phase1_trace.py  test_phase2_distribution.py  test_phase3_judgment.py  test_phase4_diagnosis.py  test_phase5_benchmark.py  test_phase5_gate.py  test_phase5_integrated_swe.py  test_phase5_swe_harness.py  test_phase6_langgraph.py  test_phase6_langsmith.py  test_tournament.py  test_workflow_map.py
