# Project metadata and tool configuration.
# This is the file Python packaging tools read to install Chorus and its dev tools.
[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "chorus-harness"
version = "0.1.0"
description = "Reliability and cost harness for coding agents."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Chorus contributors" }]
dependencies = [
  "typer>=0.12.5",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "ruff>=0.6",
]
# OpenTelemetry export to Phoenix / LangSmith. Optional: the core and the HTML
# trace viewer work without it; install to push gen_ai.* spans over OTLP.
otel = [
  "opentelemetry-sdk>=1.27",
  "opentelemetry-exporter-otlp-proto-http>=1.27",
]
# The SWE-bench headline run: a real model (anthropic), the official evaluation
# harness (swebench, which also needs Docker), and the dataset loader (datasets).
# None of this is needed for the gate, the synthetic suite, or the tests.
bench = [
  "anthropic>=0.40",
  "openai>=1.40",
  "datasets>=2.20",
  "swebench>=2.1",
]
# Real third-party agent adapters (Phase 6). The LangGraph AgentPort adapter reads
# the standard astream_events stream and needs nothing at import time; install this
# to build/run a real LangGraph agent through `LangGraphAgent.from_react_agent`.
agents = [
  "langgraph>=0.2",
  "langchain-anthropic>=0.2",
]

[project.scripts]
chorus = "chorus.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["chorus"]

[tool.pytest.ini_options]
addopts = "-s"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "SIM", "UP"]

[tool.ruff.lint.per-file-ignores]
# Holds an embedded HTML/JS trace viewer as one string literal; its lines are a
# web asset, not Python to be wrapped at 100 cols.
"chorus/report/trace_html.py" = ["E501"]
"chorus/report/fan_html.py" = ["E501"]
"chorus/report/ui_theme.py" = ["E501"]
"chorus/report/murmur_workflow_html.py" = ["E501"]
